Rewrote duels